# ai-bookkeeping

./: .editorconfig  .gitattributes  .gitignore  ADB端口配置总结.md  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_COMPARISON.md  Android开发快速开始.md  Android开发环境配置指南.md  Android环境配置README.md  CALCULATION_FIXES_REPORT.md  CHANGELOG.md  CODE_CLEANUP_REPORT.md  CODE_QUALITY_FINAL_SUMMARY.md  CODE_QUALITY_REPORT.md  C盘迁移建议.md  DATABASE_COMPATIBILITY_FIX.md  DATA_VERIFICATION_REPORT.md  FEATURES.md  GLOBAL_APP_STORE_LAUNCH_PLAN.md  HOME_PAGE_BUDGET_UPDATE.md  HOME_PAGE_VAULT_VERIFICATION.md  INSTALL_DEPS.sh  ISSUES.md  MOCK_DATA_FIX_PLAN.md  QUERY_CALCULATOR_IMPLEMENTATION.md  QUERY_EVENT_BUS_INTEGRATION.md  QUERY_EVENT_BUS_VERIFICATION.md  QUICK_START_RELEASE.md  README.md  RELEASE_NOTES_2.0.3.md  RELEASE_NOTES_2.0.4.md  RELEASE_NOTES_2.0.5.md  REMAINING_CALCULATION_ISSUES.md  SECURITY_GUIDE.md  SMS_DEPLOYMENT_GUIDE.md  TESTING.md  UX_IMPROVEMENTS.md  VOICE_PIPELINE_ANALYSIS.md  ZERO_BASED_BUDGET_TO_VAULT_INTEGRATION.md  (+50 more)
server/: .env.example  DEPLOYMENT.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  test_smtp.py
server/admin/: __init__.py  main.py
server/admin/api/: __init__.py  admins.py  app_versions.py  auth.py  backups.py  books.py  categories.py  dashboard.py  data_quality.py  deps.py  logs.py  monitoring.py  settings.py  statistics.py  transactions.py  users.py
server/admin/core/: __init__.py  audit.py  permissions.py  security.py
server/admin/models/: __init__.py  admin_log.py  admin_role.py  admin_user.py  data_quality_check.py
server/admin/schemas/: __init__.py  admin_user.py  auth.py  dashboard.py  data_management.py  user.py  (+2 more)
server/alembic/: env.py
server/app/: __init__.py  main.py
server/deploy/: README.md
server/migrations/: 001_create_email_bindings.sql  002_create_expense_targets.sql  003_create_oauth_providers.sql  004_create_app_versions.sql  005_create_upgrade_analytics.sql  fix_backup_table.sql
server/scripts/: CHANGELOG.md  QUICKSTART.md  README.md  TECHNICAL_NOTES.md  USAGE.md  generate_patch.py  init_database.py  migrate.py  reset_database.py  reset_db.sh  run_tests.py  verify_data_quality.py  verify_database.py
server/tests/: __init__.py  conftest.py  test_admin_api.py  test_ai_features.py  test_app_upgrade.py  test_auth.py  test_books.py  test_budgets.py  test_collaboration.py  test_debts_and_goals.py  test_e2e_scenarios.py  test_security.py  test_transactions.py
(+2385 files in other folders)
